yaml_examples/Istio/virtual-service-recommendation-v1-mirror-v2.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: recommendation
  namespace: tutorial
spec:
  hosts:
  - recommendation
  http:
  - route:
    - destination:
        host: recommendation
        subset: version-v1
    mirror:
      host: recommendation
      subset: version-v2
# mirror의 의미는 실제 데이터는 v1으로 가지만 backdata들은 v2에서 돌 수 있게끔.
---
